<resources>
    <string name="app_name">Converse</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="default_web_client_id" translatable="false">460369710555-cs8ql1f51hak3u6d5hbc3m1o67eq8of4.apps.googleusercontent.com</string>
    <string name="OpenDrawer">Open drawer</string>
    <string name="CloseDrawer">Close Drawer</string>
    <string name="back_arrow_chats_window">Back_arrow_chats_window</string>
    <string name="camera_chats_window">camera_chat_window</string>
    <string name="stickers_chats_window">microphone_chat_window</string>
    <string name="voice_calls_or_video_calls">Voice calls or video calls</string>
    <string name="break_the_ice">Break the ice</string>
    <string name="seemless_calls">Seemless calls</string>
    <string name="chat_with_your_friends_and_family">Chat with your friends and family</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="congratulation">Congratulation!</string>
    <string name="your_account_is_ready">Your account is ready</string>
    <string name="get_started">Get started</string>
    <string name="app_logo">App logo</string>
    <string name="someone_is_calling">someone is calling</string>
    <string name="who_to_call">who to call ?</string>
    <string name="call">call</string>
    <string name="switch_camera">Switch camera</string>
    <string name="end_call">End call</string>
    <string name="video">video</string>
    <string name="microphone">microphone</string>
    <string name="accept2">accept2</string>
    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="send_text">Send text</string>
    <string name="message_scheduler">Message Scheduler</string>
    <string name="schedule_message">Schedule Message</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="pick_a_time">Pick a time</string>
    <string name="schedule">Schedule</string>
    <string name="cancel">Cancel</string>
    <string name="skip">Skip</string>
    <string name="next_nav_activity">Next</string>
    <string name="back">Back</string>
    <string name="features_page">Features page</string>
    <string name="decorative_image">decorative image</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_your_received_otp_here">Enter your received OTP here</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="didn_t_get_your_otp">Didn\'t get your OTP?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="resend_otp_otp_verification_activity">Resend OTP</string>
    <string name="not_able_to_login">Not able to login?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">Or</string>
    <string name="login">Login</string>
    <string name="verify_otp_otp_verification">Verify OTP</string>
    <string name="otp_verification">OTP verification</string>
    <string name="we_will_send_otp_on_your_registered_mobile_number">We will send OTP on your registered mobile number</string>
    <string name="_91" translatable="false">+91</string>
    <string name="phone_number">Phone number</string>
    <string name="not_able_to_log_in_try">Not able to log in ? Try</string>
    <string name="send">Send</string>
    <string name="profile">Profile</string>
    <string name="profile_picture">Profile picture</string>
    <string name="profile_picture_activity">Profile picture</string>
    <string name="username">Username</string>
    <string name="enter_username3">Enter username</string>
    <string name="about">About</string>
    <string name="enter_bio2">Enter bio</string>
    <string name="update">Update</string>
    <string name="abouticon">aboutIcon</string>
    <string name="lets_get_started">Lets get started!</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="user">User</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="facebook">Facebook</string>
    <string name="phone_number_signup">Phone number signup</string>
    <string name="calls">Calls</string>
    <string name="placing_a_group_call">Placing a group call</string>
    <string name="about_profile">About</string>
    <string name="my_account_profile">My Account</string>
    <string name="notifications_profile">Notifications</string>
    <string name="devices_profile">Devices</string>
    <string name="privacy_profile">Privacy</string>
    <string name="language_profile">Language</string>
    <string name="text">text</string>
    <string name="_12_00" translatable="false">12:00</string>
    <string name="chats">Chats</string>
    <string name="hii_how_are_thee">Hii how are thee</string>
    <string name="header">header</string>
    <string name="next_arrow">next arrow</string>
    <string name="google">Google</string>
    <string name="don_t_have_an_account">Don_t_have_an_account</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="invite_friends">Invite friends</string>
    <string name="logout">Logout</string>
    <string name="view_contact">View contact</string>
    <string name="search">Search</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="mute_notifications">Mute notifications</string>
    <string name="more">More</string>

</resources>